<resources>
    <string name="app_name">equis</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_gallery">Clases Grupales</string>
    <string name="menu_slideshow">Suplementos</string>
    <string name="menu_accesorios">Accesorios</string>
    <string name="title_activity_perfikl">PerfiklActivity</string>
    <string name="calificanos">Calíficanos!!!</string>
    <string name="titulo_calificar">Califica Nuestra App!</string>
    <string name="dejar_comentario">Deja un Comentario</string>
    <string name="enviar">Enviar</string>
    <string name="regresar">Regresar</string>
    <string name="id">Ingrese ID</string>
    <string name="nombre">Ingrese Nombre</string>
    <string name="cantidad">Cantidad Disponible</string>
    <string name="precio">Ingrese Precio</string>
    <string name="categoria">Categoria:</string>
    <string name="accesorio">Accesorio</string>
    <string name="suplemento">Suplemento</string>
    <string name="resenas">Reseñas Recientes</string>
    <string name="resena">Reseña</string>
    <string name="estrellas">Estrellas:</string>
    <string name="comentarios">Comentarios</string>
    <string name="comentario">Comentario</string>
    <string name="estrella">Estrella</string>
    <string name="entrenadores">Lista de Entrenadores</string>
    <string name="entrenador">Entrenador</string>
    <string name="horas">Horas</string>
    <string name="horario">Horario:</string>
    <string name="gym">Gimnasio:</string>
    <string name="gyms">Gimnasios</string>
    <string name="trainers">Entrenadores</string>
    <string name="horarioE">Ingrese Horario</string>
    <string name="gymE">Ingrese Gimnasio</string>
    <string name="imagen">Ingrese Numero de Imagen</string>
    <string name="add">Agregar Entrenador</string>
    <string name="ver_rating">Ver Reseñas</string>
    <string name="registrar">Registrar un Producto</string>
    <string name="txtbanda">Bandas elásticas. Herramienta versátil para entrenamientos de resistencia. Ideales para tonificar músculos, mejorar flexibilidad y rehabilitación.</string>
    <string name="txtcuerda"> Cuerda de Saltar. Accesorio esencial para entrenamientos cardiovasculares. Perfecta para mejorar la coordinación, quemar calorías y fortalecer piernas.</string>
    <string name="txtguantes">Guantes. Diseñados para proteger tus manos durante levantamientos de peso y ejercicios de alta intensidad.</string>
    <string name="txtmochila">Mochila. Espaciosa y resistente, ideal para transportar tu equipo deportivo. Cuenta con múltiples compartimentos para mantener todo organizado, desde ropa hasta accesorios.</string>
    <string name="txtrueda">Rueda para abdominales. Herramienta efectiva para fortalecer el núcleo, mejorar la postura y tonificar abdominales. </string>
    <string name="txtshaker">Shaker. Botella mezcladora para preparar y transportar tus batidos de proteínas o suplementos. Diseñada con un sistema anti-fugas.</string>
    <string name="txtstraps">Straps. Correas de levantamiento que mejoran el agarre durante entrenamientos con pesas. Ayudan a reducir la tensión en las manos y aumentar el rendimiento en ejercicios de tracción.</string>
    <string name="txttapete">Tapete. Superficie acolchada y antideslizante para realizar ejercicios de yoga, pilates o estiramientos.</string>
    <string name="txttobilleras">Tobilleras con peso. Accesorio ideal para añadir resistencia a tus entrenamientos. Fortalece piernas y glúteos mientras caminas, corres o realizas ejercicios específicos.</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="plan">Plan:</string>
    <string name="plan_usuario">plan</string>
    <string name="correo">Correo:</string>
    <string name="celular">Celular:</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>