<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RatingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView27"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/titulo_calificar"
            android:textAlignment="center"
            android:textColor="#4E148C"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/rbRating"
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/textView61"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/rating_vertical_margin"
            android:text="@string/dejar_comentario"
            android:textAlignment="center"
            android:textColor="#613DC1"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtComentarios"
            android:layout_width="254dp"
            android:layout_height="127dp"
            android:layout_marginHorizontal="@dimen/rating_horizontal_margin"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/btnEnviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/button_margin"
            android:layout_marginVertical="@dimen/rating_vertical_margin"
            android:backgroundTint="#97DFFC"
            android:text="@string/enviar"
            android:textColor="#000000" />

        <Button
            android:id="@+id/btnRegresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/button_margin_regresar"
            android:backgroundTint="#97DFFC"
            android:text="@string/regresar"
            android:textAllCaps="false"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/txtValor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>